--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "renders Javascript pages for webscrapers",
   "main": "renderplz.js", 
   "scripts": {
-    "start": "node renderplz.js"  // Adjust this to your startup script
+    "start": "node renderplz.js"
   },
   "dependencies": {
     "express": "^4.18.2",
