--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "renders Javascript pages for webscrapers",
   "main": "renderplz.js",
   "scripts": {
-    "start": "node renderplz.js"
+    "start": "node renderplz.js",
+    "install-puppeteer": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true npm install puppeteer"
   },
   "dependencies": {
     "express": "^4.18.2",
