--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "renders Javascript pages for webscrapers",
   "main": "renderplz.js",
   "scripts": {
-    "start": "node renderplz.js",
-    "install-puppeteer": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true npm install puppeteer"
+    "start": "node renderplz.js"
   },
   "dependencies": {
     "express": "^4.18.2",
